--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ allprojects {
         google()
         jcenter()
         maven {
-            url 'https://maven.fabric.io/public'
+            url 'https://maven.google.com/'
         }
     }
 }
